# LC-Conductor

./: .eslintrc.json  pyproject.toml
lc_conductor/: __init__.py  agents.py  backend_manager.py  callback_logger.py  curl_executor.py  curl_parser.py  endpoint_discovery.py  hpc_allocation.py  resolve_default_parameters.py  tool_registration.py
lcc_ui_components/: package.json  vite.config.ts
lcc_ui_components/src/: AgentChat.tsx  AttachmentUpload.tsx  DataClassificationBanner.test.ts  DataClassificationBanner.tsx  MarkdownText.tsx  ReasoningSidebar.tsx  SettingsButton.tsx  agentSerialization.ts  allocate_hpc_resources.tsx  constants.ts  index.ts  modelContext.ts  style.css  types.ts
tests/: README.md  conftest.py  test_allowed_backends.py  test_curl_executor.py  test_curl_integration.py  test_curl_parser.py  test_endpoint_discovery.py  test_hpc_allocation.py
